[gd_scene load_steps=4 format=3 uid="uid://bsvltjlw5v7n4"]

[ext_resource type="Script" path="res://scripts/authentication/Authentication.gd" id="1_5aegj"]
[ext_resource type="LabelSettings" uid="uid://bedcoo83v8imj" path="res://resources/BigHeading.res" id="2_onvab"]
[ext_resource type="PackedScene" uid="uid://dr5408aoke1g4" path="res://scenes/authentication/ErrorPanel.tscn" id="3_om26l"]

[node name="Authentication" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5aegj")

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 2

[node name="Login" type="PanelContainer" parent="TabContainer"]
custom_minimum_size = Vector2(500, 400)
layout_mode = 2

[node name="MC" type="MarginContainer" parent="TabContainer/Login"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBC" type="VBoxContainer" parent="TabContainer/Login/MC"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="Label" type="Label" parent="TabContainer/Login/MC/VBC"]
layout_mode = 2
text = "Login"
label_settings = ExtResource("2_onvab")
horizontal_alignment = 1

[node name="HS" type="HSeparator" parent="TabContainer/Login/MC/VBC"]
layout_mode = 2
theme_override_constants/separation = 18

[node name="Email" type="LineEdit" parent="TabContainer/Login/MC/VBC"]
layout_mode = 2
placeholder_text = "Email"

[node name="Username" type="LineEdit" parent="TabContainer/Login/MC/VBC"]
layout_mode = 2
placeholder_text = "Username"

[node name="Password" type="LineEdit" parent="TabContainer/Login/MC/VBC"]
layout_mode = 2
placeholder_text = "Password"
secret = true
secret_character = "-"

[node name="HS2" type="HSeparator" parent="TabContainer/Login/MC/VBC"]
layout_mode = 2
size_flags_vertical = 3

[node name="LoginButton" type="Button" parent="TabContainer/Login/MC/VBC"]
layout_mode = 2
text = "Login"

[node name="Register" type="PanelContainer" parent="TabContainer"]
visible = false
custom_minimum_size = Vector2(500, 400)
layout_mode = 2

[node name="MC" type="MarginContainer" parent="TabContainer/Register"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBC" type="VBoxContainer" parent="TabContainer/Register/MC"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="Label" type="Label" parent="TabContainer/Register/MC/VBC"]
layout_mode = 2
text = "Register"
label_settings = ExtResource("2_onvab")
horizontal_alignment = 1

[node name="HS" type="HSeparator" parent="TabContainer/Register/MC/VBC"]
layout_mode = 2
theme_override_constants/separation = 18

[node name="Email" type="LineEdit" parent="TabContainer/Register/MC/VBC"]
layout_mode = 2
placeholder_text = "Email"

[node name="Username" type="LineEdit" parent="TabContainer/Register/MC/VBC"]
layout_mode = 2
placeholder_text = "Username"

[node name="Password" type="LineEdit" parent="TabContainer/Register/MC/VBC"]
layout_mode = 2
placeholder_text = "Password"
secret = true
secret_character = "-"

[node name="ConfirmPassword" type="LineEdit" parent="TabContainer/Register/MC/VBC"]
layout_mode = 2
placeholder_text = "Confirm Password"

[node name="HS2" type="HSeparator" parent="TabContainer/Register/MC/VBC"]
layout_mode = 2
size_flags_vertical = 3

[node name="RegisterButton" type="Button" parent="TabContainer/Register/MC/VBC"]
layout_mode = 2
text = "Register"

[node name="ErrorPanel" parent="." instance=ExtResource("3_om26l")]
visible = false
layout_mode = 2

[connection signal="pressed" from="TabContainer/Login/MC/VBC/LoginButton" to="." method="_on_login_button_pressed"]
[connection signal="pressed" from="TabContainer/Register/MC/VBC/RegisterButton" to="." method="_on_register_button_pressed"]
